# AMJPureBLEKbd

./: .gitignore  CMakeLists.txt  README.md
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
src/: actions.c  actions.h  battery_service.c  battery_service.h  ble_status.h  ble_status_led.c  ble_status_led.h  eeprom.c  eeprom.h  hids_service.c  hids_service.h  hids_service_report.h  keycode.h  keymap_common.c  keymap_common.h  keymap_default.c  layer.c  layer.h  layers.c  layers.h  main.c  main.h  matrix.c  matrix.h  nus_service.c  nus_service.h  sdk_config.h  timers.c  timers.h
src/config/: keyboard_config.h  sdk_config.h
src/script/: gdb.cmd  s130_nrf51822_xxaa.ld
